Initializes Jotline project fork and rebrands
This commit rebrands the project from "Handy" to "Jotline" and establishes its new identity as a fork.

Updates include widespread name changes across code, configuration files, UI text, and documentation (e.g., `Cargo.toml`, `package.json`, `tauri.conf.json`, `README.md`, `AGENTS.md`). The project version is reset to `0.1.0`.

All GitHub Actions workflows, issue/PR templates, funding information, changelog, and contribution guidelines are removed, signifying a fresh start for project infrastructure and governance. The Tauri auto-updater plugin is also removed.

The `README.md` and `AGENTS.md` files are completely revised to outline Jotline's vision, planned features, and specific strategies for maintaining the fork from the upstream Handy project.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "handy-app",
+  "name": "jotline",
   "private": true,
-  "version": "0.7.6",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
