--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "handy"
-version = "0.7.6"
-description = "Handy"
-authors = ["cjpais"]
+name = "jotline"
+version = "0.1.0"
+description = "Jotline"
+authors = ["pemias"]
 edition = "2021"
 license = "MIT"
-default-run = "handy"
+default-run = "jotline"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
@@ -16,7 +16,7 @@ incremental = true # Compile your binary in smaller steps.
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "handy_app_lib"
+name = "jotline_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 # [[bin]]
